--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ img{
   background-color: #00C897;
   font-family: 'Smooch Sans', sans-serif;
   color: #FFD365;
-  height: 400px;
+  height: 30%;
   margin: 0;
   text-align: center;
   text-shadow: 2px 2px #FDFFA9;
@@ -39,7 +39,7 @@ img{
   background-color: #FFD365;
   font-family: 'Smooch Sans', sans-serif;
   color: #00C897;
-  height: 400px;
+  height: 30%;
   margin: 0;
   text-align: center;
   text-shadow: 2px 2px #FDFFA9;
@@ -49,7 +49,7 @@ img{
   background-color: #FDFFA9;
   font-family: 'Smooch Sans', sans-serif;
   color: #019267;
-  height: 400px;
+  height: 40%;
   margin: 0;
   text-align: center;
   text-shadow: 2px 2px #FFD365;
