--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 body{
-  font-size: 50px;
   margin: 0;
 }
 
@@ -13,33 +12,83 @@ h5{
 
 p{
   margin: 0;
+  display: inline-block;
 }
 
 img{
+  padding: 15px;
   height: 80px;
   width: 80px;
 }
 
+
 .base{
-  height:auto;
-  width:auto;
+  height: auto;
+  width: auto;
 }
 
 .top{
-  background-color: #00C897;
-  font-family: 'Smooch Sans', sans-serif;
-  color: #FFD365;
-  height: 30%;
+  padding: 50px;
+  background-color: #151D3B;
+  color: #00FFDD;
+  font-family: 'Sacramento', cursive;
+  font-size: 50px;
+  height: 50%;
   margin: 0;
   text-align: center;
-  text-shadow: 2px 2px #FDFFA9;
+  text-shadow: 2px 2px #DFF6FF;
 }
 
+
+.about-me{
+  padding: 50px;
+  background-color: #019267;
+  height: 500px;
+  margin: 0;
+}
+
+
+.about-me-head{
+  font-family: 'Smooch Sans', sans-serif;
+  font-size: 50px;
+  text-align: center;
+  text-shadow: 2px 2px #DFF6FF;
+  color: #FDFFA9;
+}
+
+.gamer{
+  height: 300px;
+  width: 300px;
+}
+
+.about-me-img{
+  position: relative;
+  width: 400px;
+  text-align: left;
+  float: right;
+}
+
+.about-me-para{
+  padding-left: 80px;
+  height: 500px;
+  width: 60%;
+  position: relative;
+  text-align:center;
+  display: inline-block;
+  font-family: 'Fredoka', sans-serif;
+  color: #FDFFA9;
+  font-size: 20px;
+  text-align: left;
+  text-shadow: none;
+  float: center;
+}
 .middle{
   background-color: #FFD365;
   font-family: 'Smooch Sans', sans-serif;
+  font-size: 50px;
   color: #00C897;
-  height: 30%;
+  height: 80%;
+  padding: 50px;
   margin: 0;
   text-align: center;
   text-shadow: 2px 2px #FDFFA9;
@@ -48,8 +97,10 @@ img{
 .bottom{
   background-color: #FDFFA9;
   font-family: 'Smooch Sans', sans-serif;
+  font-size: 50px;
   color: #019267;
-  height: 40%;
+  height: 50%;
+  padding: 50px;
   margin: 0;
   text-align: center;
   text-shadow: 2px 2px #FFD365;
