--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ img{
 }
 
 .about-me-img{
+  padding-right: 100px;
   width: 30%;
   text-align: right;
   float: right;
@@ -70,7 +71,7 @@ img{
 .about-me-para{
   padding-left: 80px;
   height: 500px;
-  width: 60%;
+  width: 55%;
   text-align:center;
   display: inline-block;
   font-family: 'Fredoka', sans-serif;
